Renamed redis proxy to tcp proxy since its generic
Will implement a more featureful redis proxy soon, but for now the
generic tcp proxy will be the target for improvements.

Backlog size now supported in tcp proxy

Newlines added to licenses for easier readability

get_config_int() configuration helper added

--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -1,9 +1,10 @@
 {
-	"redis_proxy":
+	"tcp_proxy":
 	{
 		"listen_host": "127.0.0.1",
-		"listen_port": "6380",
+		"listen_port": 6380,
 		"upstream_host": "127.0.0.1",
-		"upstream_port": "6379"
+		"upstream_port": 6379,
+		"backlog_size": 128
 	}
 }
