Added connection pooling to tcp_proxy module
Added get_config_boolean helper
Added connection_pooling option to tcp_proxy
Improved some inline comment

--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -5,6 +5,7 @@
 		"listen_port": 6380,
 		"upstream_host": "127.0.0.1",
 		"upstream_port": 6379,
-		"backlog_size": 128
+		"backlog_size": 128,
+		"connection_pooling": false
 	}
 }
