--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -6,6 +6,6 @@
 		"upstream_host": "127.0.0.1",
 		"upstream_port": 6379,
 		"backlog_size": 128,
-		"connection_pooling": false
+		"connection_pooling": true
 	}
 }
