--- a/Makefile.template
+++ b/Makefile.template
@@ -13,7 +13,7 @@ clean:
 
 # Executable Targets
 bin/openbalance: obj/logging.o obj/main.o obj/config.o obj/module.o \
-                 obj/modules.o obj/event.o obj/memory.o obj/connectionpool.o \
+                 obj/modules.o obj/event.o obj/memory.o obj/connection.o \
                  obj/master.o obj/worker.o
 	${CC} -o $@ $^ ${OB_LIBS}
 
@@ -34,8 +34,8 @@ obj/module.o: src/module.c src/module.h
 obj/memory.o: src/memory.c src/memory.h
 	${CC_OBJ} src/memory.c
 
-obj/connectionpool.o: src/connectionpool.c src/connectionpool.h
-	${CC_OBJ} src/connectionpool.c
+obj/connection.o: src/connection.c src/connection.h obj/master.o
+	${CC_OBJ} src/connection.c
 
 obj/event.o: src/event.c src/event.h
 	${CC_OBJ} src/event.c
@@ -46,7 +46,8 @@ obj/master.o: src/master.c src/master.h
 obj/worker.o: src/worker.c src/worker.h
 	${CC_OBJ} src/worker.c
 
-obj/modules.o: src/modules/*/*.c src/modules/*/*.h src/builder.py src/modules.h.template
+obj/modules.o: src/modules/*/*.c src/modules/*/*.h src/builder.py \
+               src/modules.h.template
 	@python src/builder.py ${OB_LIBS}
 
 # Utility Targets
