--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -1,11 +1,10 @@
 {
 	"tcp_proxy":
 	{
-			"listen_host": "127.0.0.1",
-			"listen_port": 6380,
-			"upstream_host": "127.0.0.1",
-			"upstream_port": 6379,
-			"backlog_size": 128,
-			"connection_pooling": true
+		"listen_addr": "tcp://localhost:6380",
+		"upstream_host": "127.0.0.1",
+		"upstream_port": 6379,
+		"backlog_size": 128,
+		"connection_pooling": true
 	}
 }
