More proxy generalizations

--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -1,7 +1,7 @@
 {
-	"tcp_proxy":
+	"simple_proxy":
 	{
-		"listen_addr": "tcp://localhost:6380",
+		"listen_addr": "tcp://127.0.0.1:6380",
 		"upstream_host": "127.0.0.1",
 		"upstream_port": 6379,
 		"backlog_size": 128,
