added unix listen socket support

--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -1,10 +1,17 @@
 {
 	"simple_proxy":
-	{
-		"listen_addr": "tcp://127.0.0.1:6380",
-		"upstream_host": "127.0.0.1",
-		"upstream_port": 6379,
-		"backlog_size": 128,
-		"connection_pooling": true
-	}
+	[
+		{
+			"listen_addr": "unix:///tmp/proxy_test",
+			"upstream_host": "127.0.0.1",
+			"upstream_port": 6379,
+			"backlog_size": 128
+		},
+		{
+			"listen_addr": "tcp://127.0.0.1:6380",
+			"upstream_host": "127.0.0.1",
+			"upstream_port": 6379,
+			"backlog_size": 128
+		}
+	]
 }
