--- a/dev/openbalance.conf
+++ b/dev/openbalance.conf
@@ -1,17 +1,9 @@
 {
-	"simple_proxy":
-	[
-		{
-			"listen_addr": "unix:///tmp/proxy_test",
-			"upstream_host": "127.0.0.1",
-			"upstream_port": 6379,
-			"backlog_size": 128
-		},
-		{
-			"listen_addr": "tcp://127.0.0.1:6380",
-			"upstream_host": "127.0.0.1",
-			"upstream_port": 6379,
-			"backlog_size": 128
-		}
-	]
+	"redis_proxy":
+	{
+		"listen_addr": "tcp://127.0.0.1:6380",
+		"upstream_host": "127.0.0.1",
+		"upstream_port": 6379,
+		"backlog_size": 128
+	}
 }
