fixed bc_memcpy and bc_getdelim, more redis work

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,5 +7,5 @@ all: suite_bc_ops
 run_tests: all
 	./suite_bc_ops
 
-suite_bc_ops: test_bc_ops.c testing.h
+suite_bc_ops: test_bc_ops.c testing.h ../src/buffer_chain.c ../src/buffer_chain.h
 	${CC} -o $@ test_bc_ops.c ../obj/buffer_chain.o
